--- a/carousel.css
+++ b/carousel.css
@@ -20,6 +20,7 @@ body {
 .carousel-caption {
   bottom: 3rem;
   z-index: 10;
+  text-shadow: 0 0 2.5rem black; 
 }
 
 /* Declare heights because of positioning of img element */
